2014-07-14  Yaroslav Halchenko <debian@onerussian.com>

	* Fix various typos in code and documentation.

2014-07-10  Albert Chu <chu11@llnl.gov>

	* man/libipmiconsole.3.pre.in: Document libipmiconsole.conf manpage.
	
2014-07-01  Albert Chu <chu11@llnl.gov>

	* libipmiconsole/ipmiconsole_processing.c (_check_payload_sizes_legitimate):
	Fix max_sol_character_send_size corner case calculation.  Should
	be based on "inbound" size not "outbound" size.
	
2014-05-30  Shashi Dande <Shashi.Dande@hp.com>

	* libfreeipmi/api/ipmi-ssif-driver-api.h,
	libfreeipmi/api/ipmi-ssif-driver-api.c (api_ssf_cmd): Retry reads
	as needed.
	
2014-05-07  Klaus Kaempf <kkaempf@suse.de>

	* ipmipower/ipmipower_ping.c: Fix compile bug.
	
2014-03-19  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Support 'ipmiping' workaround.
	
2014-03-19  David Binderman <dcb314@hotmail.com>
	
	* libfreeipmi/interpret/ipmi-interpret.c: Fix leap before you look
	bugs.
	
2014-03-13  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Support Supermicro get-power-supply-status
	and get-pmbus-power-supply-status commands.
	
2014-03-12  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add notes on ipmi-detect for IPMI
	discovery.
	
2014-02-21  Albert Chu <chu11@llnl.gov>

	* libipmiconsole/ipmiconsole_processing.c (_sol_retransmission_timeout):
	Only increment sol packet sequence number for workaround once.
	 
2014-02-20  Albert Chu <chu11@llnl.gov>

	* libipmiconsole, ipmiconsole, common/parsecommon: Support
	SERIAL_ALERTS_DEFERRED workaround.  Support
	INCREMENT_SOL_PACKET_SEQUENCE workaround.

2014-02-20  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/templates/ipmi-rmcpplus-support-and-payload-cmds-templates.h,
	libfreeipmi/cmds/ipmi-rmcpplus-support-and-payload-cmds.c: Fix
	payload, two fields were flipped by accident.  Make fields required and not optional.
	
2014-02-06  Albert Chu <chu11@llnl.gov>

	* Porting issues discovered by guy here
